fixing mobile menu on iphone

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -419,7 +419,8 @@
   .layout__header.layout__header-mobile{
     height: 0;
     min-height: 0;
-    z-index: 4;
+    z-index: 5;
+
     .layout__header-row--bottom {
       height: 0;
       min-height: 0;
@@ -431,14 +432,14 @@
 
       .navmenu.navmenu-fixed-left {
         position: fixed;
+        top: 0;
         left: 0;
         height: 100%;
         max-width: 230px;
+        width: 230px;
         background-color: #0080af;
-        transform: translateX(0);
         padding:0;
         border: none;
-        top: 0px;
         -webkit-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
         -moz-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
         box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
