--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -47,6 +47,11 @@ html {
     padding-top: 0;
 }
 
+.layout__wrapper {
+  overflow-y: visible;
+  overflow-x: visible;
+}
+
 .path-node .angled-background-color-white {
     margin-top: -40px!important;
 }
